// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Ui/Icons All Icons 1`] = `
<div
  style="height: 100%; width: 100%; background: white;"
>
  <table>
    <tr>
      <th>
        Name
      </th>
      <th>
        Component
      </th>
    </tr>
    <tr>
      <td>
        chevron-bas
      </td>
      <td>
        <svg
          aria-labelledby="chevron-bas"
          fill="#666"
          height="24px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-chevron-bas"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        chevron-haut
      </td>
      <td>
        <svg
          aria-labelledby="chevron-haut"
          fill="#666"
          height="24px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-chevron-haut"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        close
      </td>
      <td>
        <svg
          aria-labelledby="close"
          fill="#666"
          height="24px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-close"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        download
      </td>
      <td>
        <svg
          aria-labelledby="download"
          fill="#666"
          height="24px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        x
      </td>
      <td>
        <svg
          aria-labelledby="x"
          fill="#666"
          height="24px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-x"
          />
        </svg>
      </td>
    </tr>
  </table>
</div>
`;

exports[`Automated Storybook Snapshots Ui/Icons Icon All Size 1`] = `
<div
  style="height: 100%; width: 100%; background: white;"
>
  <table>
    <tr>
      <th>
        Name
      </th>
      <th>
        Size
      </th>
    </tr>
    <tr>
      <td>
        s
      </td>
      <td>
        <svg
          aria-labelledby="download"
          fill="#666"
          height="16px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        m
      </td>
      <td>
        <svg
          aria-labelledby="download"
          fill="#666"
          height="24px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        l
      </td>
      <td>
        <svg
          aria-labelledby="download"
          fill="#666"
          height="48px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="48px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        xl
      </td>
      <td>
        <svg
          aria-labelledby="download"
          fill="#666"
          height="128px"
          role="application"
          style="display: block;"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="128px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-close"
              viewBox="0 0 24 24"
            >
              <title>
                close
              </title>
              <path
                d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
            <symbol
              id="icon-x"
              viewBox="0 0 24 24"
            >
              <title>
                x
              </title>
              <path
                d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
  </table>
</div>
`;
